--- a/session4_covid_thailand_seir_model/session4_covid_thailand_seir_model.qmd
+++ b/session4_covid_thailand_seir_model/session4_covid_thailand_seir_model.qmd
@@ -1,13 +1,13 @@
 ---
 title: "Modelling an outbreak - COVID-19 in Thailand"
-author:
-    - Thanks to <a href="http://www.tropmedres.ac/researchers/researcher/lisa-white">Lisa White</a>, and <a href="https://www.ndm.ox.ac.uk/team/ben-cooper">Ben Cooper</a>, Nuffield Department of Medicine, Oxford University and
-    - <a href="https://research.jcu.edu.au/portfolio/michael.meehan1/">Michael Meehan</a>, Australian Institute of Tropical Health & Medicine, James Cook University.
-    - Adapted and presented by <a href="https://research.jcu.edu.au/portfolio/emma.mcbryde">Emma McBryde</a>, Australian Institute of Tropical Health & Medicine, James Cook University
-    - July 2022
-output:
-    html_document:
-        self_contained: yes
+subtitle: SPARKLE short course 'Mathematical Modelling of Infectious Diseases'
+format:
+    training-html:
+        presenter: Emma McBryde, Australian Institute of Tropical Health & Medicine, James Cook University
+        contributors:
+            - Lisa White, Nuffield Department of Medicine, Oxford University
+            - Michael Meehan, Australian Institute of Tropical Health & Medicine, James Cook University
+            - Emma McBryde, Australian Institute of Tropical Health & Medicine, James Cook University
 autocomplete: false
 ---
 <!-- todo: update the example from COVID-19 in Thailand to a more local example that still needs an SEIR model. Perhaps a covid-19 in Indonesia -- e.g. Jakarta, example. -->
@@ -19,19 +19,6 @@ knitr::opts_chunk$set(
 )
 ```
 
-```{css, echo=F}
-textarea {
-    width: 100%;
-}
-
-.line-block {
-    line-height: 1.5em;
-}
-
-.line-block a {
-    font-style: italic;
-}
-```
 # Overview of days 3 and 4 of this workshop
 
 <!-- placeholder text, please edit and refine the content -->
