--- a/session4_covid_thailand_seir_model/session4_covid_thailand_seir_model.qmd
+++ b/session4_covid_thailand_seir_model/session4_covid_thailand_seir_model.qmd
@@ -1,6 +1,7 @@
 ---
 title: "Modelling an outbreak - COVID-19 in Thailand"
 subtitle: SPARKLE short course 'Mathematical Modelling of Infectious Diseases'
+description: "Write a disease model and compare it to data"
 format:
     training-html:
         presenter: Emma McBryde, Australian Institute of Tropical Health & Medicine, James Cook University
